# not-the-collector

./: CREDITS.rst  LICENSE  README.rst  collector.cabal  config.sample  stack.yaml
src/: Main.hs
src/Collector/: Config.hs  Types.hs
src/Graylog/: Gelf.hs
