name:                collector
version:             0.1.0.0
synopsis:            A Graylog collector.
license:             MIT
license-file:        LICENSE
author:              Andreas Stührk
maintainer:          andy@hammerhartes.de
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable collector
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , directory >= 1.2.2.0
                     , filepath
                     , fsnotify >= 0.2
                     , htoml
                     , mtl
                     , network
                     , optparse-applicative
                     , resourcet
                     , stm
                     , stm-conduit
                     , text
                     , time
                     , transformers
  default-language:    Haskell2010
